# ctaplot

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  README.rst  codemeta.json  dashboard.ipynb  energy_gamma_diffuse_psimu.npy  environment.yml  envivronment.yml  gammaboard.py  license.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: conda.yml  continuousintegration.yml  pythonstylechecker.yml
conda/: meta.yaml
ctaplot/: __init__.py  ana.py  dataset.py  io.py  plotcamera.py  plots.py
ctaplot/ana/: __init__.py  ana.py
ctaplot/gammaboard/: LST1_exploration_dashboard.ipynb  __init__.py  dashboard.ipynb  gammaboard.py  lst_dl1.ipynb  reader.py
ctaplot/io/: __init__.py  dataset.py  io.py
ctaplot/plots/: __init__.py  calib.py  grid.py  plots.py  style.py
ctaplot/tests/: CMakeLists.txt  test_ana.py  test_ctana.py  test_ctaplots.py  test_dataset.py  test_get_datasets.py  test_import_ctana.py  test_import_plots.py  test_imports.py  test_plotcamera.py  test_plots.py
docs/: Makefile  README.rst  conf.py  data_format.rst  examples.rst  index.rst  license.rst  modules.rst  requirements.txt
docs/notebooks/: ROC curves.ipynb  plot_cta_irf.ipynb  resolution_definition.ipynb  resolution_examples.ipynb  style.ipynb
example/test_mc_en/: test_mc_en.h5
examples/notebooks/: plot_cta_irf.ipynb  resolution_definition.ipynb  resolution_examples.ipynb  roc_curves.ipynb  style.ipynb
gammaboard/: __init__.py  gammaboard.py
gammaboard/tests/: test_gammaboard.py
share/HESSII_Impact/: HESS_Impact_Angular_Resolution_Loose_Mono.txt  (+15 more)
(+114 files in other folders)
