[metadata]
name = ctaplot
description = Compute and plot CTA IRFs
author = Thomas Vuillaume, Mikael Jacquemont
author_email = thomas.vuillaume@lapp.in2p3.fr
url = https://github.com/cta-observatory/ctaplot
long_description = file: README.rst
github_project = cta-observatory/cta-plot
license = MIT

[options]
python_requires = >=3.9
